Gave Augere its name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hello",
+    "name": "Augere - Augmentation Editor",
     "main": "index.html",
     "window": {
         "toolbar": false,
